# langgraph_lab

basic_html_lang_auditor/: pyproject.toml  sidekick.py  sidekick_tools.py  ui.py
basic_html_lang_auditor/.gradio/input/: urls.csv
basic_html_lang_auditor/.gradio/output/: result.csv
enhanced_html_lang_auditor_with_ai_recommendation/: .gitignore  pyproject.toml  sidekick.py  sidekick_tools.py  ui.py
enhanced_html_lang_auditor_with_ai_recommendation/gradio/output/2025_12_29/: 2025_12_29_23_37_result.csv  2025_12_29_23_39_result.csv
enhanced_html_lang_auditor_with_ai_recommendation/gradio/output/2025_12_30/: 2025_12_30_16_18_result.csv  2025_12_30_16_34_result.csv
enhanced_html_lang_auditor_without_ai_recommendation/: .gitignore  main.py  pyproject.toml  sidekick.py  sidekick_tools.py  ui.py
enhanced_html_lang_auditor_without_ai_recommendation/.gradio/input/: urls.csv
enhanced_html_lang_auditor_without_ai_recommendation/.gradio/output/: result.xlsx
enhanced_html_lang_auditor_without_ai_recommendation/.gradio/output/2025_12_29/: 2025_12_29_17_02_result.csv
